Closed Bug 1709406 Opened 3 years ago Closed 3 years ago

Crash in [@ mozilla::widget::(anonymous namespace)::ImageCallbackHelper::Notify]

Categories

(GeckoView :: General, defect, P1)

Unspecified
Android

Tracking

(firefox90 fixed)

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: kbrosnan, Assigned: agi)

References

Details

(Keywords: crash, leave-open, Whiteboard: [geckoview:m90])

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/9e2ceab2-736e-4557-af25-c225c0210504

Reason: SIGSEGV /SEGV_MAPERR

Top 10 frames of crashing thread:

0 libxul.so mozilla::widget:: widget/android/ImageDecoderSupport.cpp:122
1 libxul.so mozilla::image::ProgressTracker::SyncNotifyProgress image/ProgressTracker.cpp:368
2 libxul.so mozilla::image::RasterImage::NotifyProgress image/RasterImage.cpp:1680
3 libxul.so mozilla::image::RasterImage::NotifyDecodeComplete image/RasterImage.cpp:1716
4 libxul.so mozilla::detail::RunnableFunction<mozilla::image::IDecodingTask::NotifyDecodeComplete xpcom/threads/nsThreadUtils.h:534
5 libxul.so mozilla::RunnableTask::Run xpcom/threads/TaskController.cpp:482
6 libxul.so mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:766
7 libxul.so mozilla::TaskController::ProcessPendingMTTask xpcom/threads/TaskController.cpp:405
8 libxul.so mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal xpcom/threads/nsThreadUtils.h:534
9 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1159
Severity: -- → S2
Priority: -- → P1
Whiteboard: [geckoview:m90]
Rank: 1

This change makes it so we always resolve the GeckoResult when we encounter an error.

The stacktrace in the bug points to the SendBitmap() call, which I don't really
understand how it's possible. Maybe some inlining is causing the stacktrace to
misreport the line? This patch adds some extra null checks in case that's the
issue.

Assignee: nobody → agi
Status: NEW → ASSIGNED

I'm not sure if the patch will actually fix the bug (but it's good to have it in anyway) so let's leave this open for now.

Keywords: leave-open
Pushed by asferro@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/514cd18f970a
Propagate errors from ImageDecoderSupport. r=aklotz

The crash hasn't happened in nightly since the patch landed, but I just noticed it's only ever happened on two people's phones, so it might not be that frequent, I'll monitor it for a little bit.

Latest build id with the crash is still 20210510093555, we can call this fixed.

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: