Bug 1709406 - Propagate errors from ImageDecoderSupport. r=aklotz

This change makes it so we always resolve the GeckoResult when we encounter an error.

The stacktrace in the bug points to the SendBitmap() call, which I don't really
understand how it's possible. Maybe some inlining is causing the stacktrace to
misreport the line? This patch adds some extra null checks in case that's the
issue.

Differential Revision: https://phabricator.services.mozilla.com/D115082